# obs-studio

./: .cirrus.yml  .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.rst
.github/scripts/: .build.zsh  Build-Windows.ps1
.github/workflows/: build-project.yaml  cherry-picker.yml  dispatch.yaml  docs.yml  main.yml  memes.yml  publish.yaml  push.yaml  scheduled.yaml  services-json.yml  sign-project.yaml  sign-windows.yaml  steam.yml
CI/: build-windows.ps1  check-jsonschema.py  check-services.py  cherry-picker.py
CI/macos/: appcast_convert.py  appcast_download.py
CI/steam/: obs_m1_build.vdf
CI/windows/: 01_install_dependencies.ps1  03_package_obs.ps1
UI/: CMakeLists.txt  auth-keychain-win.cpp  auth-keychain.hpp  auth-oauth.cpp  auth-oauth.hpp  auth-youtube.cpp  goliveapi-network.cpp  multitrack-video-output.cpp  obs-app-theming.cpp  obs-app-theming.hpp  obs-app.cpp  obs-app.hpp  obs-widgets.cpp  obs-widgets.hpp  perf-viewer.cpp  perf-viewer.hpp  platform-osx.mm  platform-windows.cpp  platform-x11.cpp  platform.hpp  safe_modules.h.in  ui-config.h.in  window-basic-main-icons.cpp  window-basic-main-outputs.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-appearance.cpp  window-basic-settings-appearance.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-source-select.cpp  window-basic-source-select.hpp
UI/cmake/: feature-zoo.cmake  legacy.cmake  ui-elements.cmake  ui-qt.cmake  ui-windows.cmake
UI/forms/: IdianZoo.ui  OBSBasic.ui  OBSBasicProperties.ui  obs.qrc  (+2 more)
docs/: _redirects
frontend/: obs-main.cpp
libobs/: CMakeLists.txt  obs-config.h  obs-data.c  obs-encoder.c  obs-encoder.h  obs-hotkey-name-map.c  obs-hotkey.c  obs-internal.h  obs-module.c  obs-nix.c  obs-output.c  obs-properties.c  obs-scene.c  obs-scene.h  obs-service.c  obs-source.c  obs-video-gpu-encode.c  obs-video.c  obs.c  obs.h
libobs-d3d11/: d3d11-shader.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp
plugins/obs-nvenc/: CMakeLists.txt  cuda-helpers.h  nvenc-compat.c  nvenc-cuda.c  nvenc-d3d11.c  nvenc-helpers.c  nvenc-helpers.h  nvenc-internal.h  nvenc-opts-parser.c  nvenc-properties.c  nvenc.c
plugins/obs-nvenc/cmake/: dependencies.cmake
plugins/obs-nvenc/data/locale/: en-US.ini
plugins/obs-nvenc/obs-nvenc-test/: obs-nvenc-test.cpp
plugins/win-capture/: CMakeLists.txt  audio-helpers.c  audio-helpers.h  game-capture.c  graphics-hook-ver.h  json-helpers.c  json-helpers.h  lookup-config.h.in  plugin-main.c  window-capture.c
plugins/win-capture/data/: compat.json  package.json
plugins/win-capture/data/locale/: en-US.ini
(+155 files in other folders)
